assets/css/style.css
/* ... */
.search-container.active {
  visibility: visible;
  opacity: 1;
}

.search-container .input-wrapper {
  position: relative;
  max-width: 560px;
  width: 100%;
}

.search-container .search-field {
  color: var(--white);
  font-size: 2rem;
  padding: 20px;
  padding-inline-end: 60px;
  border-block-end: 3px solid var(--white_10);
  outline: none;
  transition: var(--transition);
}

.search-container .search-field:focus { border-color: var(--light-gray-2); }

.search-container .search-field::-webkit-search-cancel-button { display: none; }

.search-container .search-submit {
  position: absolute;
  top: 50%;
  right: 20px;
  transform: translateY(-50%);
  font-size: 25px;
  color: var(--marigold);
}

.search-container .search-submit ion-icon { --ionicon-stroke-width: 70px; }

.search-container .search-close {
  position: fixed;
  inset: 0;
  cursor: default;
  z-index: -1;
}





/*-----------------------------------*\
  #HERO
\*-----------------------------------*/

.hero-banner { display: none; }

.hero {
  --section-padding: 60px;
  margin-block-start: 84px;
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  text-align: center;
  min-height: 100vh;
  display: grid;
  align-items: center;
}

.hero-subtitle {
  color: var(--marigold);
  font-size: var(--fs-6);
  font-weight: var(--fw-700);
  text-transform: uppercase;
}

.hero-title { margin-block: 15px 12px; }

.hero-text {
  color: var(--light-gray-2);
  margin-block-end: 45px;
}





/*-----------------------------------*\
  #BRAND
\*-----------------------------------*/

.brand {
  --section-padding: 60px;
  background-image: var(--gradient);
}

.brand .has-scrollbar { padding-block-end: 0; }

.brand .has-scrollbar::-webkit-scrollbar { display: none; }

.brand-item {
  min-width: calc(50% - 10px);
  scroll-snap-align: start;
}

.brand-item > img { margin-inline: auto; }





/*-----------------------------------*\
  #LATEST GAME
\*-----------------------------------*/

.section-wrapper {
  position: relative;
  background-color: var(--white);
  z-index: 1;
}

.section-wrapper::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 57%;
  background-image: url("../images/section-wrapper-bg.png");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  z-index: -1;
}

.latest-game .section-title { margin-block-end: 80px; }

.latest-game .has-scrollbar {
  margin-inline: -15px;
  padding-inline: 15px;
  scroll-padding-inline-start: 15px;
}

.latest-game-card {
  position: relative;
  box-shadow: var(--shadow-2);
}

.latest-game-card .card-content {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  background-color: var(--xiketic_90);
  padding: 35px 25px;
}

.latest-game-card .card-badge {
  position: absolute;
  bottom: 100%;
  left: 25px;
}

.latest-game-card .card-title {
  margin-block-end: 12px;
  transition: var(--transition);
}

.latest-game-card .card-title:is(:hover, :focus) { color: var(--marigold); }

.latest-game-card .card-price {
  color: var(--silver);
  font-size: var(--fs-10);
  font-weight: var(--fw-600);
}

.latest-game-card .card-price .span { margin-inline-start: 5px; }





/*-----------------------------------*\
  #LIVE MATCH
\*-----------------------------------*/

.live-match {
  padding-block-start: 0;
  overflow-x: hidden;
}

.live-match .section-title { margin-block-end: 90px; }

.live-match-banner {
  position: relative;
  background-color: var(--light-gray-1);
  border-radius: 6px;
  overflow: hidden;
  box-shadow: var(--shadow-3);
}

.live-match-banner .play-btn {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: var(--marigold);
  font-size: 60px;
}

.live-match-player {
  position: relative;
  padding-block-start: var(--section-padding);
}

.live-match-player::after {
  content: "LIVE";
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -40%);
  font-size: 15rem;
  font-weight: var(--fw-600);
  color: var(--cultured-2);
  z-index: -1;
}

.live-match-player .player { max-width: max-content; }

.live-match-player .player-2 { margin-inline-start: auto; }

.live-match-detail { margin-block: 50px; }

.live-match-subtitle {
  background-color: var(--marigold);
  color: var(--white);
  font-size: var(--fs-9);
  text-transform: uppercase;
  font-weight: var(--fw-700);
  letter-spacing: 2px;
  padding: 4px 20px;
  max-width: max-content;
  margin-inline: auto;
  margin-block-end: 30px;
}

.live-match-time {
  color: var(--xiketic);
  font-size: var(--fs-1);
  font-weight: var(--fw-700);
  max-width: max-content;
  margin-inline: auto;
  line-height: 1;
}





/*-----------------------------------*\
  #FEATURED GAME
\*-----------------------------------*/

.featured-game { background-color: var(--cultured-2); }

.featured-game .section-title {
  color: var(--xiketic);
  margin-block-end: 90px;
}

.featured-game .has-scrollbar { gap: 0; }

.featured-game-card { position: relative; }

.featured-game-card :is(.card-content, .card-content-overlay) { position: absolute; }

.featured-game-card .card-content {
  bottom: 0;
  left: 0;
  right: 0;
  padding: 30px 35px;
  transition: var(--transition);
}

.featured-game-card .card-content-overlay {
  inset: 0;
  background-color: var(--marigold_75);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  opacity: 0;
  transition: var(--transition);
}

.featured-game-card .card-title { margin-block-end: 5px; }

.featured-game-card .card-meta {
  color: var(--white);
  font-size: var(--fs-11);
  font-weight: var(--fw-500);
  text-transform: uppercase;
  display: flex;
  align-items: center;
  gap: 4px;
}

.featured-game-card .card-content .card-meta { color: var(--platinum); }

.featured-game-card .card-content ion-icon {
  color: var(--marigold);
  font-size: 14px;
}

.featured-game-card .card-icon { margin-block-end: 20px; }
/* ... */

